refactor: Challenge 리포지토리 코드 정리 (#123)
- PersonalChallengeRepository 및 TeamChallengeRepository의 코드 스타일 개선
- 커서 기반 페이지네이션 구현